fix: Make lead text more readable
The current lead text for the webpage is really straining on the eyes.
It makes me really not want to read it. So I made some changes that
would make it a lot easier to digest.

--- a/css/custom.css
+++ b/css/custom.css
@@ -272,6 +272,10 @@ h4 {
  color: #333;
 }
 
+.lead {
+  font-weight: 400 !important;
+}
+
 .benefit h3 {
   font-size: 21px;
   font-weight: 400;
